--- a/Katakana.css
+++ b/Katakana.css
@@ -177,3 +177,159 @@ p {
 #learn-Katakana {
     display: none;
 }
+@media (max-width: 600px) {
+    :root {
+        --backgroundcolor: RGB(28, 80, 82);
+        --boxbackground: RGB(176, 255, 250);
+        --textcolor: RGB(54, 155, 158);
+        --boxbackgroundtransform: #81c3bd;
+    }
+
+    body {
+        background-color: var(--backgroundcolor);
+        background-image: url(https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimages.ctfassets.net%2Ftn1xf54wq7nh%2FUxfD9ejROEWWSk8KQQeSw%2F199f8da46a8a00b84401390d1c386ea3%2FJapan_2-min.jpg&f=1&nofb=1&ipt=dd8173c07dbc0a90b39e8caf27871fc335b2e932e987e97eb8ddcad78712b2e2&ipo=images);
+    }
+
+    h1 {
+        font-size: 40px;
+        color: var(--textcolor);
+        background-color: var(--boxbackground);
+        border-radius: 10px;
+        padding: 10px 20px;
+        text-align: center;
+        margin-top: 5px;
+    }
+
+    table {
+        border-collapse: collapse;
+        margin: 20px auto;
+    }
+
+    td,
+    th {
+        border: 1px solid black;
+        padding: 2px 5px;
+        text-align: left;
+        font-size: 18px;
+        border-radius: 10px;
+    }
+
+    th {
+        background-color: var(--boxbackground);
+    }
+
+    tr {
+        background-color: var(--boxbackground);
+    }
+
+    .Nav-Items a {
+        color: var(--textcolor);
+        font-size: 20px;
+        background-color: var(--boxbackground);
+        text-decoration: none;
+        border-radius: 10px;
+        padding: 15px 20px;
+        transition: background-color 0.5s ease-in-out;
+        display: flex;
+        text-align: center;
+        margin-bottom: 10px;
+
+    }
+
+    .Nav-Items a:hover {
+        font-size: 30px;
+        transition: background-color 0.5s ease-in-out, font-size 0.5s ease-in-out;
+        background-color: var(--boxbackgroundtransform);
+    }
+
+    #Vokabular,
+    #Home {
+        padding: 10px 20px;
+    }
+
+    #Hiragana .old-text {
+        padding-left: 20px;
+        padding-top: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: opacity 0.5s ease-in-out;
+    }
+
+    #Hiragana .new-text {
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+    }
+
+    #Hiragana:hover .old-text {
+        opacity: 0;
+    }
+
+    #Hiragana:hover .new-text {
+        opacity: 1;
+    }
+
+    .Nav-Items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    p {
+        color: var(--textcolor);
+        font-size: 16px;
+        background-color: var(--boxbackground);
+        border-radius: 10px;
+        padding: 10px 20px;
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    .Katakana-explenation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+
+    .Katakana-explenation label {
+        color: var(--textcolor);
+        font-size: 12px;
+        background-color: var(--boxbackground);
+        text-decoration: none;
+        border-radius: 10px;
+        padding: 10px 20px;
+        transition: background-color 0.5s ease-in-out;
+        display: inline-block;
+        margin-bottom: 10px;
+    }
+
+    #What-Katakana-Text,
+    #History-Katakana-Text,
+    #Sound-Katakana-Text,
+    #usecases-Katakana-Text,
+    #learn-Katakana-Text {
+        display: none;
+    }
+
+    #What-Katakana:checked~#What-Katakana-Text,
+    #History-Katakana:checked~#History-Katakana-Text,
+    #Sound-Katakana:checked~#Sound-Katakana-Text,
+    #usecases-Katakana:checked~#usecases-Katakana-Text,
+    #learn-Katakana:checked~#learn-Katakana-Text {
+        display: block;
+    }
+
+    #What-Katakana,
+    #History-Katakana,
+    #Sound-Katakana,
+    #usecases-Katakana,
+    #learn-Katakana {
+        display: none;
+    }
+
+
+}
