--- a/Vokabular.css
+++ b/Vokabular.css
@@ -63,10 +63,14 @@ tr {
     background-color: var(--boxbackground);
     text-decoration: none;
     border-radius: 20px;
-     padding: 30px 40px;
+    padding: 30px 40px;
     position: relative;
     display: inline-block;
     transition: background-color 0.5s ease-in-out;
+}
+#Home {
+    padding: 23px 43px;
+
 }
 
 .Nav-Items a:hover {
