--- a/index.css
+++ b/index.css
@@ -97,6 +97,17 @@ p:hover {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
+#About-Me {
+    color: var(--textcolor);
+    font-size: 3vw;
+    background-color: var(--boxbackground);
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 20px 40px;
+    transition: background-color 0.5s ease-in-out;
+    position: relative;
+    display: inline-block;
+}
 
 @media (max-width: 600px) {
     .Nav-Items a {
