--- a/index.css
+++ b/index.css
@@ -107,6 +107,12 @@ p:hover {
     transition: background-color 0.5s ease-in-out;
     position: relative;
     display: inline-block;
+   margin-top:30px;
+}
+#About-Me:hover {
+    font-size: 4vw;
+    transition: background-color 0.5s ease-in-out, font-size 0.5s ease-in-out;
+    background-color: var(--boxbackgroundtransform);
 }
 
 @media (max-width: 600px) {
